# mixmag_axum

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  deploy.sh
src/: main.rs  schema.rs
src/config/: database.rs
src/models/: article.rs  cd_reviews.rs  mod.rs  news.rs  pagination.rs
src/routes/: articles.rs  cd_reviews.rs  health.rs  mod.rs  news.rs
src/services/: articles.rs  cd_reviews.rs  health.rs  mod.rs  news.rs
