[package]
name = "mixmag_axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
diesel = { version = "2.1.0", features = ["mysql","r2d2"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
